nuxt.config.jsをts化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,11 @@
     "baseUrl": ".",
     "paths": {
       "~/*": [
-        "./*"
+        "./src/*"
       ],
       "@/*": [
-        "./*"
-      ]
+        "./src/*"
+      ],
     },
     "types": [
       "@types/node",
