--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt-ts generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "npx nuxt storybook"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
