--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "storybook": "npx nuxt storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/storybook": "^3.3.1",
     "core-js": "^3.6.5",
